--- a/WebApplication1/Views/Home/Compendium.cshtml
+++ b/WebApplication1/Views/Home/Compendium.cshtml
@@ -13,7 +13,7 @@ ViewData["Title"] = "View";
 </head>
 
 <body class="comp">
-    <div class="d-flex row gx-3 justify-content-center">
+    <div class="d-flex row gx-3 vh-100 justify-content-center">
         <div class="propWrapper hideables overflow-hidden d-none d-sm-block col-2">
             <div class="shine-wrapper hideables">
                 <img id="ppPropImg" class="hideables" src="https://fakeimg.pl/512/" />
