--- a/WebApplication1/Views/Home/DungeonMasterSuite.cshtml
+++ b/WebApplication1/Views/Home/DungeonMasterSuite.cshtml
@@ -12,20 +12,20 @@ ViewData["Title"] = "View";
 </head>
 
 <body class="dmsuite">
-    <div class="row-1 d-flex bg-light">
-        <div class="left-wrapper debugg  col-8">
-            <nav class="dm-nav navbar navbar-expand-lg bg-light navbar-light col-8">
+    <div class="row-1 d-flex bg-light flex-column flex-sm-row">
+        <div class="left-wrapper debugg col-12 col-sm-6 col-lg-8">
+            <nav class="dm-nav navbar navbar-expand-lg bg-light navbar-light  col-8">
                 <div class="container">
                     <button type="button" class="navbar-toggler float-end ms-auto btn btn-primary" type="button"
                         data-bs-toggle="collapse" data-bs-target="#designTaskBar">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="navbar-collapse collapse " id="designTaskBar">
-                        <ul class="navbar-nav ">
-                            <li class="nav-item active"><a class="px-lg-5 nav-link" href="">New Page</a></li>
-                            <li class="nav-item"><a class="px-lg-5 nav-link" href="">Edit Page</a></li>
-                            <li class="nav-item"><a class="px-lg-5 nav-link" href="">View Page</a></li>
-                            <li class="nav-item"><a class="px-lg-5 nav-link" href="">Char Sheets</a></li>
+                    <div class="navbar-collapse collapse" id="designTaskBar">
+                        <ul class="navbar-nav text-dark">
+                            <li class="nav-item active"><a class="px-lg-5 nav-link text-dark" href="">New Page</a></li>
+                            <li class="nav-item"><a class="px-lg-5 nav-link text-dark" href="">Edit Page</a></li>
+                            <li class="nav-item"><a class="px-lg-5 nav-link text-dark" href="">View Page</a></li>
+                            <li class="nav-item"><a class="px-lg-5 nav-link text-dark" href="">Char Sheets</a></li>
                         </ul>
                     </div>
                 </div>
@@ -33,12 +33,12 @@ ViewData["Title"] = "View";
 
             <div class="flex-wrapper col ps-xl-5 p-sm-3 p-2  ">
                 <div class="debugg options">
-                    <div class="name-card pb-4">
-                        <input type="text" class="p-3 display-6 rounded-custom border-dark fw-bold"
+                    <div class="name-card pb-2 pb-md-4">
+                        <input type="text" class="p-3 custom-lg rounded-custom border-dark fw-bold"
                             placeholder="Website Name" id="wname" name="wname">
                     </div>
                     <div class="row">
-                        <div class="debugg options-A col-6 ">
+                        <div class="debugg options-A col-12 col-md-6 ">
                             <select class="lay-sel form-select form-select-lg border-dark">
                                 <option value="" selected disabled hidden>Choose here</option>
                                 <option value="1">One</option>
@@ -48,39 +48,39 @@ ViewData["Title"] = "View";
                                 <option value="5">Five</option>
                             </select>
                             <div class="thumbnail d-flex flex-column">
-                                <img class="" src="../images/square.png" />
+                                <img class="mx-auto mx-sm-0" style="max-width:60vw;" src="../images/square.png" />
                                 <button class="btn btn-primary w-75 py-3 mx-auto">Upload Thumbnail</button>
                             </div>
                         </div>
-                        <div class="debugg options-B col-6">
+                        <div class="debugg options-B col-12 col-md-6 ">
                             <div class="grid-parent d-flex flex-column">
-                                <div class="debugg d-flex flex-row p-3 px-2 h2">
+                                <div class="debugg d-flex flex-row p-1 p-md-3 px-2 h2">
                                     <input type="color" class="colorInput prim" value="#c14444"
                                         input="colorChoice()"></input>
                                     <input type="text" placeholder="Primary" id="pcol" class="col-text input-custom"
                                         name="pcol">
                                         </input>
                                 </div>
-                                <div class="debugg d-flex flex-row p-3 px-2 h2">
+                                <div class="debugg d-flex flex-row p-1 p-md-3 px-2 h2">
                                     <input type="color" class="colorInput seco" value="#46afad"
                                         input="colorChoice()"></input>
                                     <input type="text" placeholder="Secondary" id="scol" class="col-text input-custom"
                                         name="scol">
                                 </div>
-                                <div class="debugg d-flex flex-row p-3 px-2 h2">
+                                <div class="debugg d-flex flex-row p-1 p-md-3 px-2 h2">
                                     <input type="color" class="colorInput tert" value="#af9a0d"
                                         input="colorChoice()"></input>
                                     <input type="text" placeholder="Tertiary" id="tcol" class="col-text input-custom"
                                         name="tcol" value="#af9a0d">
                                 </div>
-                                <div class="debugg d-flex flex-row p-3 px-2 h3">
+                                <div class="debugg d-flex flex-row p-1 p-md-3 px-2 h3">
                                     <div class="form-check form-switch switchy">
                                         <input class="form-check-input" type="checkbox" role="switch" id="playerVisSwit"
                                             checked>
                                         <label class="form-check-label" for="playerVisSwit">Visible to Players</label>
                                     </div>
                                 </div>
-                                <div class="debugg d-flex flex-row p-3 px-2 h3">
+                                <div class="debugg d-flex flex-row p-1 p-md-3 px-2 h3">
                                     <div class="form-check form-switch switchy">
                                         <input class="form-check-input " type="checkbox" role="switch" id="compVisSwit"
                                             checked>
@@ -94,9 +94,9 @@ ViewData["Title"] = "View";
             </div>
         </div>
 
-        <div class="debugg float-right col-4 d-flex flex-column">
+        <div class="debugg float-right col-12 col-sm-6 col-lg-4 d-flex flex-column-reverse flex-sm-column">
             <button class="btn btn-primary mx-5 my-2 p-3">Publish Skeleton</button>
-            <div class="square ">
+            <div class="square" onclick="fullScreen(this)">
                 <img src="" alt="">
             </div>
         </div>
