--- a/WebApplication1/wwwroot/css/site.css
+++ b/WebApplication1/wwwroot/css/site.css
@@ -9,6 +9,13 @@
     height: 83%;
   }
 }
+html{
+  min-height: 100%;
+ 
+}
+.ppTermTextWrapper{
+  min-height: calc(100vh - 290px) !important;
+}
 
 .fullScreen{
         position: absolute;
@@ -64,6 +71,29 @@ aspect-ratio: 1 / 1;
 .comp-scroll-box{
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
+}
+
+.custom-lg{
+ font-size: calc(1.375rem + 1.5vw);
+    font-weight: 300;
+    line-height: 1.2;
+}
+
+@media (max-width: 992px){
+  .custom-lg{
+     font-size: calc(0.8075rem + 1.2vw);
+    font-weight: 300;
+    line-height: 1.2;
+}
+}
+
+
+@media (max-width: 768px){
+  .custom-lg{
+  font-size: calc(0.5rem + 1vw);
+  font-weight: 300;
+  line-height: 1.2;
+}
 }
 
 .input-custom{
