--- a/WebApplication1/Views/Home/Compendium.cshtml
+++ b/WebApplication1/Views/Home/Compendium.cshtml
@@ -22,27 +22,28 @@ ViewData["Title"] = "View";
         </div>
 
         <div class="cWrapper col-11 mx-sm-auto col-sm-8 d-flex flex-column align-items-center py-3">
-            <h1 class="text-light d-none d-sm-block" style="letter-spacing: s0.5em;">COMPENDIU<span style="letter-spacing:0;">M</span></h1>
-            <h1 class="text-light h5 d-sm-none" style="letter-spacing: 0.4em;">COMPENDIU<span style="letter-spacing:0;">M</span></h1>
+            <h1 class="text-light d-none d-sm-block" style="letter-spacing: 0.5em;">COMPENDIU<span
+                    style="letter-spacing:0;">M</span></h1>
+            <h1 class="text-light h5 d-sm-none" style="letter-spacing: 0.4em;">COMPENDIU<span
+                    style="letter-spacing:0;">M</span></h1>
             <!--^^^^Grosssssssss-->
             <div class="search-wrapper col-lg-8 d-flex justify-content-center pb-2">
                 <input type="text" placeholder="Search.." class="form-input form-control input-lg" id="comp-search">
                 <button type="submit" onclick="populateFakeData()" class="btn-square-md ratio-1x1"><i
                         class="fa fa-search"></i></button>
             </div>
+            <p class="text-light">(psst, click search to generate more cards)</p>
 
             <div class="overflow-scroll comp-scroll-box border-light border w-100 p-3 row">
                 <!--DELETE THIS LATER-->
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-2">
-                    <div class="comp-item border">
-                        <img class="w-100" src="https://fakeimg.pl/512/">
-                        <div class="item-text text-light p-1">
-                            <h2>Website Name</h2>
-                            <p>Description</p>
-                        </div>
+
+                <div class="card col-12 col-sm-6 col-md-4 col-lg-3 mb-2 bg-transparent" >
+                    <img class="card-img-top" src="https://fakeimg.pl/512/" alt="Card image cap">
+                    <div class="card-body comp-item border item-text text-light p-1">
+                        <h5 class="card-title">Website Name</h5>
+                        <p class="card-text">Description</p>
                     </div>
                 </div>
-
                 <!--END OF CONTENT-->
             </div>
         </div>
