--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -10,8 +10,78 @@ ViewData["Title"] = "Home Page";
     <title>GURPS Client</title>
 </head>
 
-<h1>Color Test</h1>
 <body class="colorTest">
+
+    <!-- Modal trigger button -->
+    <button type="button" class="btn btn-primary btn-lg btn-dark border border-info text-info" data-bs-toggle="modal" data-bs-target="#modalId">
+        Contact Me
+    </button>
+
+    <!-- Modal Body -->
+    <!-- if you want to close by clicking outside the modal, delete the last endpoint:data-bs-backdrop and data-bs-keyboard -->
+    <div class="modal fade" id="modalId" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false" role="dialog"
+        aria-labelledby="modalTitleId" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-sm" role="document">
+            <div class="modal-content bg-dark text-info">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalTitleId">
+                        Contact Form
+                    </h5>
+                    <button type="button" class="btn-close text-info" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form class="">
+                        <!-- Name input -->
+                        <div data-mdb-input-init class="form-outline mb-4">
+                            <label class="form-label" for="name4">Name</label>
+                            <input type="text" id="name4" class="form-control bg-dark text-info border-info" />
+
+                        </div>
+
+                        <!-- Email input -->
+                        <div data-mdb-input-init class="form-outline mb-4">
+                            <label class="form-label" for="email4">Email address</label>
+                            <input type="email" id="email4" class="form-control bg-dark text-info border-info" />
+                        </div>
+
+                        <!-- textarea input -->
+                        <div data-mdb-input-init class="form-outline mb-4">
+                            <label class="form-label" for="textarea4">Your message</label>
+                            <textarea id="textarea4" rows="4" class="form-control bg-dark text-info border-info"></textarea>
+                        </div>
+
+                        <!-- Checkbox -->
+                        <div class="form-check d-flex justify-content-center mb-4">
+                            <input class="form-check-input me-2 bg-dark text-info border-info" type="checkbox" value="" id="checkbox4" checked />
+                            <label class="form-check-label" for="checkbox4">
+                                Send me a copy of this message
+                            </label>
+                        </div>
+
+                        <!-- Submit button -->
+
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                        Close
+                    </button>
+                    <button type="submit" data-mdb-button-init data-mdb-ripple-init
+                        class="btn btn-primary btn-block">Send</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Optional: Place to the bottom of scripts -->
+    <script>
+        const myModal = new bootstrap.Modal(
+            document.getElementById("modalId"),
+            options,
+        );
+    </script>
+
+    <h1>Color Test</h1>
     <div class="container d-flex">
         <div>
             <h1>Normal</h1>
